<resources>
    <plurals name="cab_subtitle">
        <item quantity="zero">None selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <plurals name="dev_mode_countdown">
        <item quantity="one">You are now %d more step away from being a developer!</item>
        <item quantity="other">You are now %d steps away from being a developer!</item>
    </plurals>
    <string name="dev_mode_disabled">Successfully disabled developer mode!</string>
    <string name="dev_mode_on">You\'re now a developer!</string>
    <string name="dev_mode_off">Successfully turned off developer mode!</string>
    <string name="dev_mode_already">Stop clicking - you\'re already a developer!</string>
    <string name="dev_mode_confirm_enable_dialog_title">Enable developer mode?</string>
    <string name="dev_mode_confirm_enable_dialog_msg">Note: This can be turned off later in Settings
        &gt; Developer Options &gt; Developer Mode.</string>
    <string name="dev_mode_confirm_disable_dialog_title">Disable developer mode?</string>
    <string name="dev_mode_confirm_disable_dialog_msg">This cannot be reversed!</string>
    <string name="pref_header_dev_mode_opts_title">Developer options</string>
    <string name="about_dialog_msg">Purpose: To help students in their studies
        \nVersion: %s\n---\nApp is fully open source. Check it out!
    </string>
    <string name="about_frag_app_info_card_version_title">Version</string>
    <string name="about_frag_app_info_card_open_app_info_title">Open app info</string>
    <string name="about_frag_app_info_card_open_app_info_subtitle">Open the app\'s info page in
        Settings</string>
    <string name="about_frag_app_info_card_view_source_code_title">View source code</string>
    <string name="about_frag_app_info_card_view_source_code_subtitle">Opens the app\'s source code
        in a new tab</string>
    <string name="about_frag_app_info_card_app_license_title">App license</string>
    <string name="about_frag_app_info_card_open_source_licenses_title">Open-source licenses</string>
    <string name="about_frag_about_author_card_title">Author</string>
    <string name="about_frag_about_author_card_author_name_title">Edric Chan</string>
    <string name="about_frag_about_author_card_view_author_website_title">Author\'s website</string>
    <string name="account_account_actions_button_title">Account actions</string>
    <string name="account_sign_in_button_title">Sign in</string>
    <string name="account_avatar_desc">Account avatar</string>
    <string name="account_user_name_default">Guest</string>
    <string name="menu_main_about_title">About</string>
    <string name="menu_main_account_title">Account</string>
    <string name="menu_view_task_archive_todo_title">Archive todo</string>
    <string name="menu_view_task_unarchive_todo_title">Unarchive todo</string>
    <string name="menu_debug_title">Debug</string>
    <string name="menu_view_task_delete_todo_title">Delete todo</string>
    <string name="menu_view_task_edit_title">Edit</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_help_licenses_title">Licenses</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="menu_help_refresh_articles">Refresh articles</string>
    <string name="menu_send_feedback_title">Send Feedback</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_main_share_app_title">Share this app</string>
    <string name="menu_frag_task_sort_by_title">Sort by…</string>
    <string name="sort_by_bottomsheet_due_date_newest_title">Due date (newest first)</string>
    <string name="sort_by_bottomsheet_due_date_oldest_title">Due date (oldest first)</string>
    <string name="sort_by_bottomsheet_none_title">None</string>
    <string name="sort_by_bottomsheet_title_asc_title">Title (ascending)</string>
    <string name="sort_by_bottomsheet_title_desc_title">Title (descending)</string>
    <string name="menu_help_src_code_title">View source code</string>
    <string name="action_version">Version</string>
    <string name="cab_action_select_all">Select all</string>
    <string name="cab_action_archive_selected_chats">Archive selected</string>
    <string name="cab_action_block_selected_chats">Block selected</string>
    <string name="cab_action_delete_selected_chats">Delete selected</string>
    <string name="cab_action_leave_selected_chats">Leave selected</string>
    <string name="cab_action_report_selected_chats_as_spam">Report selected as spam</string>
    <string name="debug_activity_account_info_summary">Show information about the currently
        signed-in Firebase User
    </string>
    <string name="debug_activity_account_info_title">Account info</string>
    <string name="debug_activity_category_device">Device</string>
    <string name="debug_activity_category_firebase">Firebase</string>
    <string name="debug_activity_category_logging">Logging</string>
    <string name="debug_activity_category_updates">Updates</string>
    <string name="debug_activity_crash_app_summary">Programmatically crash the app with Firebase
        Crashlytics</string>
    <string name="debug_activity_crash_app_title">Crash app</string>
    <string name="debug_activity_device_info_summary">Show information about the current
        device</string>
    <string name="debug_activity_device_info_title">Device info</string>
    <string name="debug_activity_reset_instance_id_title">Delete device\'s Instance ID</string>
    <string name="debug_activity_send_notification_summary">Programmatically send a FCM
        notification request</string>
    <string name="debug_activity_send_notification_title">Send FCM notification</string>
    <string name="debug_activity_updates_tip_summary">Tip: You can copy the values by long pressing
        on the preference and tapping on "Copy" in the context menu
    </string>
    <string name="debug_activity_updates_last_checked_for_updates_date_title">Last checked for
        updates date</string>
    <string name="debug_activity_updates_clear_last_checked_for_updates_date_title">Clear last
        checked for updates date
    </string>
    <string name="debug_activity_updates_last_updated_date_title">Last updated date</string>
    <string name="debug_activity_updates_clear_last_updated_date_title">Clear last updated
        date</string>
    <string name="pref_about_app_info_title">App info</string>
    <string name="pref_about_app_info_summary">Open this app\'s info page in Settings</string>
    <string name="pref_about_app_version_title">App version</string>
    <string name="pref_about_app_version_code_title">App version code</string>
    <string name="pref_about_app_build_variant_title">Build variant</string>
    <string name="pref_about_author_title">App author</string>
    <string name="pref_about_author_summary">Tap here to view his website</string>
    <string name="pref_about_licenses_title">Licenses</string>
    <string name="pref_about_licenses_summary">License details for open source libraries/
        software</string>
    <string name="pref_about_source_code_summary">View the app\'s source code on Github</string>
    <string name="pref_about_source_code_title">Source code</string>
    <string name="pref_category_todo_general">General</string>
    <string name="pref_category_weekly_summary">Weekly summary</string>
    <string name="pref_category_weekly_summary_prefs">Weekly summary preferences</string>
    <string name="pref_check_for_update_frequency_title">Checking frequency</string>
    <string name="feature_flags_about_title">About feature flags</string>
    <string name="feature_flags_about_desc">Feature flags are features which can be enabled or
        disabled. This allows for testing of certain unstable features which would not be normally
        made available to the public.</string>
    <string name="feature_flags_about_warning"><b>Warning:</b> The developer of this app is not
        responsible for any data loss caused by enabling certain feature flags.
        <b>You have been warned.</b></string>
    <string name="feature_flags_reset_title">Reset feature flags</string>
    <string name="feature_flags_opt_out_title">Opt out of feature flags</string>
    <string name="feature_flags_prefer_remote_config_title">Prefer Firebase Remote Config</string>
    <string name="feature_flags_prefer_remote_config_msg">Whether the feature flag values from
        Firebase Remote Config should take precedence over the local preferences.</string>
    <string name="feature_flags_category_options_title">Options</string>
    <string name="feature_flags_category_appearance_title">Appearance</string>
    <string name="feature_flags_category_appearance_desc">Feature flags that affect the design of
        the application.</string>
    <string name="feature_flags_calendar_enabled_title">Calendar UI</string>
    <string name="feature_flags_calendar_enabled_summary">Enables support for a WIP Calendar
        interface.</string>
    <string name="feature_flags_interface_v2_enabled_title">App design v2</string>
    <string name="feature_flags_interface_v2_enabled_summary">Revamps the UI with a fresh new
        look.</string>
    <string name="feature_flags_about_app_v2_enabled_title">About app UI v2</string>
    <string name="feature_flags_about_app_v2_enabled_summary">Revamps the about app UI to show
        more info about the app.</string>
    <string name="pref_todo_default_sort_title">Default sorting mode</string>
    <string name="pref_updates_download_over_metered_summary">Switching this on will allow
        downloads on cellular as well
        as other metered networks. For more info, check your network settings
    </string>
    <string name="pref_updates_download_over_metered_title">Download over metered networks</string>
    <string name="pref_updates_options_title">Update options</string>
    <string name="pref_updates_title">Updates</string>
    <string name="pref_weekly_summary_about_desc">A curated summary of the progress of your
        completion of your todos, sent as a notification
    </string>
    <string name="pref_weekly_summary_configure_list_desc">Set the items to be shown in weekly
        summary</string>
    <string name="pref_weekly_summary_configure_list_title">Configure weekly summary list</string>
    <string name="pref_weekly_summary_day_desc">Set a day to get your weekly summary</string>
    <string name="pref_weekly_summary_day_title">Day to retrieve weekly summary</string>
    <string name="pref_weekly_summary_masterswitch_enabled_title">Enable weekly summary</string>
    <string name="pref_weekly_summary_notification_opts_summary">Customize how the notifications
        are shown</string>
    <string name="pref_weekly_summary_notification_opts_title">Notification settings</string>
    <string name="icon_picker_info_header_title">Icon info</string>
    <string name="icon_picker_info_name_title">Name</string>
    <string name="icon_picker_info_name_default"><em>&lt;No name specified&gt;</em></string>
    <string name="icon_picker_info_desc_title">Description</string>
    <string name="icon_picker_info_desc_default"><em>&lt;No description specified&gt;</em></string>
    <string name="icon_picker_info_author_title">Author</string>
    <string name="icon_picker_info_author_default"><em>&lt;No author specified&gt;</em></string>
    <string name="icon_picker_info_about_author_title">About the author</string>
    <string name="icon_picker_info_about_author_default"><em>&lt;No info was specified&gt;</em>
    </string>
    <string name="icon_picker_info_created_at_title">Created at</string>
    <string name="icon_picker_info_created_at_default"><em>Unknown date</em></string>
    <string name="icon_picker_info_last_modified_title">Last modified</string>
    <string name="icon_picker_info_last_modified_default"><em>Unknown date</em></string>
</resources>