<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		app:key="debug_category_logging"
		app:title="@string/debug_activity_category_logging">
		<SwitchPreferenceCompat
			app:defaultValue="true"
			app:icon="@drawable/ic_info_outline_24dp"
			app:key="debug_enable_verbose_log"
			app:summary="@string/debug_activity_enable_verbose_log_summary"
			app:title="@string/debug_activity_enable_verbose_log_title" />
	</PreferenceCategory>
	<PreferenceCategory
		app:key="debug_category_device"
		app:title="@string/debug_activity_category_device">
		<Preference
			app:icon="@drawable/ic_perm_device_information_outline_24dp"
			app:key="debug_device_info"
			app:summary="@string/debug_activity_device_info_summary"
			app:title="@string/debug_activity_device_info_title" />
	</PreferenceCategory>
	<PreferenceCategory
		app:key="debug_category_firebase"
		app:title="@string/debug_activity_category_firebase">
		<Preference
			app:icon="@drawable/ic_account_circle_outline_24dp"
			app:key="debug_account_info"
			app:summary="@string/debug_activity_account_info_summary"
			app:title="@string/debug_activity_account_info_title" />
		<Preference
			app:icon="@drawable/ic_close_24dp"
			app:key="debug_crash_app"
			app:summary="@string/debug_activity_crash_app_summary"
			app:title="@string/debug_activity_crash_app_title" />
		<Preference
			app:icon="@drawable/ic_send_outline_24dp"
			app:key="debug_send_notification"
			app:summary="@string/debug_activity_send_notification_summary"
			app:title="@string/debug_activity_send_notification_title" />
		<Preference
			app:icon="@drawable/ic_delete_outline_24dp"
			app:key="debug_reset_instance_id"
			app:title="@string/debug_activity_reset_instance_id_title" />
	</PreferenceCategory>
	<PreferenceCategory
		app:key="debug_category_updates"
		app:title="@string/debug_activity_category_updates">
		<SwitchPreferenceCompat
			app:defaultValue="true"
			app:key="debug_updates_use_testing_url"
			app:title="@string/debug_activity_updates_use_testing_url_title" />
		<EditTextPreference
			app:enabled="false"
			app:key="debug_updates_custom_url"
			app:title="@string/debug_activity_updates_set_custom_url_title" />
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>