<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		app:key="pref_category_todo_general"
		app:title="@string/pref_category_todo_general">
		<ListPreference
			app:defaultValue="none"
			app:entries="@array/pref_todo_default_sort_options_array"
			app:entryValues="@array/pref_todo_default_sort_options_array_values"
			app:icon="@drawable/ic_sort_24dp"
			app:key="pref_todo_default_sort"
			app:title="@string/pref_todo_default_sort_title"
			app:useSimpleSummaryProvider="true" />
	</PreferenceCategory>
	<PreferenceCategory
		app:key="pref_category_weekly_summary"
		app:title="@string/pref_category_weekly_summary">
		<Preference
			app:enabled="false"
			app:icon="@drawable/ic_info_24dp"
			app:summary="@string/pref_weekly_summary_about_desc" />
		<SwitchPreferenceCompat
			app:defaultValue="true"
			app:key="weekly_summary_enabled"
			app:title="@string/pref_weekly_summary_enabled_title" />
		<PreferenceCategory
			app:dependency="weekly_summary_enabled"
			app:key="pref_category_weekly_summary_prefs"
			app:title="@string/pref_category_weekly_summary_prefs">
			<ListPreference
				app:defaultValue="1"
				app:entries="@array/pref_weekly_summary_days_array"
				app:entryValues="@array/pref_weekly_summary_days_array_values"
				app:icon="@drawable/ic_calendar_check_24dp"
				app:key="pref_weekly_summary_day"
				app:summary="@string/pref_weekly_summary_day_desc"
				app:title="@string/pref_weekly_summary_day_title"
				app:useSimpleSummaryProvider="true" />
			<MultiSelectListPreference
				app:entries="@array/pref_weekly_summary_options_array"
				app:entryValues="@array/pref_weekly_summary_options_array_values"
				app:icon="@drawable/ic_tune_24dp"
				app:key="pref_weekly_summary_list"
				app:summary="@string/pref_weekly_summary_configure_list_desc"
				app:title="@string/pref_weekly_summary_configure_list_title" />
			<Preference
				app:icon="@drawable/ic_settings_24dp"
				app:key="pref_weekly_summary_notification_opts"
				app:summary="@string/pref_weekly_summary_notification_opts_summary"
				app:title="@string/pref_weekly_summary_notification_opts_title" />
		</PreferenceCategory>
	</PreferenceCategory>
</androidx.preference.PreferenceScreen>