<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="pref_weekly_summary_enabled"
    app:title="@string/pref_weekly_summary_masterswitch_enabled_title">
    <Preference
        app:enabled="false"
        app:icon="@drawable/ic_info_outline_24dp"
        app:summary="@string/pref_weekly_summary_about_desc" />
    <PreferenceCategory
        app:key="pref_category_weekly_summary_prefs"
        app:title="@string/pref_category_weekly_summary_prefs">
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/pref_weekly_summary_days_array"
            app:entryValues="@array/pref_weekly_summary_days_array_values"
            app:icon="@drawable/ic_calendar_check_outline_24dp"
            app:key="pref_weekly_summary_day"
            app:summary="@string/pref_weekly_summary_day_desc"
            app:title="@string/pref_weekly_summary_day_title"
            app:useSimpleSummaryProvider="true" />
        <MultiSelectListPreference
            app:entries="@array/pref_weekly_summary_options_array"
            app:entryValues="@array/pref_weekly_summary_options_array_values"
            app:icon="@drawable/ic_tune_24dp"
            app:key="pref_weekly_summary_list"
            app:summary="@string/pref_weekly_summary_configure_list_desc"
            app:title="@string/pref_weekly_summary_configure_list_title" />
        <Preference
            app:icon="@drawable/ic_settings_outline_24dp"
            app:key="pref_weekly_summary_notification_opts"
            app:summary="@string/pref_weekly_summary_notification_opts_summary"
            app:title="@string/pref_weekly_summary_notification_opts_title" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>