<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:title="@string/menu_help_refresh_articles"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_feedback"
        android:title="@string/menu_send_feedback_title" />
    <item
        android:id="@+id/action_version"
        android:title="@string/action_version" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/menu_help_licenses_title" />
    <item
        android:id="@+id/action_source_code"
        android:title="@string/menu_help_src_code_title" />
</menu>