<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:icon="@drawable/ic_sort_24dp"
            android:title="@string/menu_frag_task_sort_by_title"
            app:showAsAction="ifRoom">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_sort_none"
                        android:title="@string/sort_by_bottomsheet_none_title" />
                    <item
                        android:id="@+id/action_sort_title_descending"
                        android:title="@string/sort_by_bottomsheet_title_desc_title" />
                    <item
                        android:id="@+id/action_sort_title_ascending"
                        android:title="@string/sort_by_bottomsheet_title_asc_title" />
                    <item
                        android:id="@+id/action_sort_due_date_new_to_old"
                        android:title="@string/sort_by_bottomsheet_due_date_newest_title" />
                    <item
                        android:id="@+id/action_sort_due_date_old_to_new"
                        android:title="@string/sort_by_bottomsheet_due_date_oldest_title" />
                </group>
            </menu>
        </item>
    <item
            android:id="@+id/action_sort_by"
            android:icon="@drawable/ic_sort_24dp"
            android:title="@string/menu_frag_task_sort_by_title"
            app:showAsAction="always"/>
</menu>