<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<!-- There's already a FAB to edit the task -->
	<item
			android:id="@+id/action_edit"
			android:icon="@drawable/ic_edit_outline_24dp"
			android:title="@string/menu_view_task_edit_title"
			android:visible="false"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/action_mark_as_done"
			android:icon="@drawable/ic_check_24dp"
			android:title="@string/action_mark_as_done"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/action_delete"
			android:icon="@drawable/ic_delete_outline_24dp"
			android:title="@string/menu_view_task_delete_todo_title"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/action_archive"
			android:icon="@drawable/ic_archive_outline_24dp"
			android:title="@string/menu_view_task_archive_todo_title"
			app:showAsAction="ifRoom"/>
	<!-- Only visible if the task has been archived -->
	<item
			android:id="@+id/action_unarchive"
			android:icon="@drawable/ic_unarchive_outline_24dp"
			android:title="@string/menu_view_task_unarchive_todo_title"
			android:visible="false"
			app:showAsAction="ifRoom"/>
</menu>